# poetry_tkinter

./: README.md  pyproject.toml
src/poetry_tkinter/: basic_tkinter.py
